--- a/src/main/resources/templates/asd.html
+++ b/src/main/resources/templates/asd.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>ASD</title>
 </head>
-<body style="background-color: grey">
+<body style="background-image: url('images/free_energy_numbers');">
 ASD...
 </body>
 </html>
