--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -41,12 +41,12 @@
                                     </p>
                                 </div>
 
-                                <div class="form-check d-flex justify-content-center mb-5">
-                                    <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3cg"/>
-                                    <label class="form-check-label" for="form2Example3cg">
-                                        I agree all statements in <a href="#!" class="text-body"><u>Terms of service</u></a>
-                                    </label>
-                                </div>
+<!--                                <div class="form-check d-flex justify-content-center mb-5">-->
+<!--                                    <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3cg"/>-->
+<!--                                    <label class="form-check-label" for="form2Example3cg">-->
+<!--                                        I agree all statements in <a href="#!" class="text-body"><u>Terms of service</u></a>-->
+<!--                                    </label>-->
+<!--                                </div>-->
 
                                 <div class="d-flex justify-content-center">
                                     <button type="submit"
