--- a/src/main/resources/templates/asd.html
+++ b/src/main/resources/templates/asd.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>ASD</title>
 </head>
-<body style="background-image: url('images/free_energy_numbers');">
+<body th:style="'background-image: url(/images/free_energy_numbers.jpg);'">
 ASD...
+<div th:text="${asd_attr}"></div>
+<img th:src="@{/images/free_energy_numbers.jpg}" alt="asd">
 </body>
 </html>
