ui: working on main page layout

--- a/src/main/resources/templates/asd.html
+++ b/src/main/resources/templates/asd.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>ASD</title>
 </head>
-<body th:style="'background-image: url(/images/free_energy_numbers.jpg);'">
+<body style="color: white;" th:styleappend="'background-image: url(/images/free_energy_numbers.jpg);'">
 ASD...
 <div th:text="${asd_attr}"></div>
-<img th:src="@{/images/free_energy_numbers.jpg}" alt="asd">
+<!--<img th:src="@{/images/free_energy_numbers.jpg}" alt="asd">-->
 </body>
 </html>
