--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,39 +7,43 @@
     <title>Home page</title>
 </head>
 <body>
-<section class="d-flex align-items-stretch justify-content-center vh-100"
-         th:style="'background-image: url(/images/free_energy_numbers.jpg);'">
-<!--        <div class="container h-100 py-5">-->
-<!--            <div class="row d-flex justify-content-center align-items-center h-100">-->
-<!--                <div class="col-12 col-md-10 col-lg-8 col-xl-6 h-100">-->
-                    <div class="card h-100 w-100 m-5" style="border-radius: 15px;">
-                        <div class="card-body p-5">
-                            <h2 class="card-title text-center mb-5">Welcome to Cash Manager!</h2>
+<section class="d-flex align-items-center justify-content-center vh-100"
+         style="
+         background-repeat: no-repeat;
+         background-position: center;
+         background-size: cover;"
+         th:styleappend="'background-image: url(/images/free_energy_numbers.jpg);'">
+    <div class="container h-auto">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-12 col-md-10 col-lg-8 col-xl-6 h-100">
+                <div class="card bg-info-subtle h-100 " style="border-radius: 15px;">
+                    <div class="card-body h-100 p-5">
+                        <h2 class="card-title text-center mb-5">Welcome to Cash Manager!</h2>
+                        <form
+                                class=""
+                                method="get"
+                                th:action="@{/register}">
 
-                            <form
-                                    method="post"
-                                    th:action="@{/register}">
+                            <div class="d-flex align-items-stretch justify-content-center">
+                                <button type="submit"
+                                        class="btn btn-success btn-block btn-lg text-body">
+                                    Register
+                                </button>
+                            </div>
 
-                                <div class="d-flex justify-content-center">
-                                    <button type="submit"
-                                            class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">
-                                        Register
-                                    </button>
-                                </div>
-
-                                <p class="text-center text-muted mt-5 mb-0">Already have an account?
-                                    <a href="#!"
-                                       th:href="@{/login}"
-                                       class="fw-bold text-body">
-                                        <u>Login here</u>
-                                    </a>
-                                </p>
-                            </form>
-                        </div>
+                            <p class="text-center text-muted mt-5 mb-0">Already have an account?
+                                <a href="#!"
+                                   th:href="@{/login}"
+                                   class="fw-bold text-body">
+                                    <u>Login here</u>
+                                </a>
+                            </p>
+                        </form>
                     </div>
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 <div th:replace="~{fragments/bootstrapFragments :: script}"></div>
 </body>
