--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -8,17 +8,16 @@
     <title>Register Page</title>
 </head>
 <body>
-<section class="vh-100 bg-image"
+<section class="d-flex justify-content-center align-items-center vh-100"
          style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
-    <div class="mask d-flex align-items-center h-100 gradient-custom-3">
-        <div class="container h-100">
+        <div class="container h-auto">
             <div class="row d-flex justify-content-center align-items-center h-100">
-                <div class="col-12 col-md-9 col-lg-7 col-xl-6">
-                    <div class="card" style="border-radius: 15px;">
-                        <div class="card-body p-5">
+                <div class="col-12 col-md-10 col-lg-8 col-xl-6 h-100">
+                    <div class="card bg-light-subtle h-100" style="border-radius: 15px;">
+                        <div class="card-body h-100 p-5">
                             <h2 class="text-uppercase text-center mb-5">Create an account</h2>
-
                             <form
+                                    class=""
                                     method="post"
                                     th:action="@{/register}"
                                     th:object="${user}">
@@ -51,7 +50,7 @@
                                 <div class="d-flex justify-content-center">
                                     <button type="submit"
                                             class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">
-                                        Register
+                                        Send
                                     </button>
                                 </div>
 
@@ -68,7 +67,6 @@
                 </div>
             </div>
         </div>
-    </div>
 </section>
 <div th:replace="~{fragments/bootstrapFragments :: script}"></div>
 </body>
