fix(ui): localized image on login page

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,10 +8,11 @@
 </head>
 <body>
 <section class="d-flex justify-content-center align-items-center vh-100"
-         style="background-image: url('https://pixabay.com/get/g6edce8e0468e04f0edbfdde932fc4b6a6aff89f38032b8b41693a260b095166d92efb642fba65a33c2c29d1d15154ba53b69a5b522544ffd370c9c7b9a6f912d_1920.jpg');
+         style="
          background-repeat: no-repeat;
          background-position: center;
-         background-size: cover;">
+         background-size: cover;"
+         th:styleappend="'background-image: url(/images/green_tunnel-3233082_1920.jpg);'">
     <div class="container h-auto">
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-12 col-md-10 col-lg-8 col-xl-6 h-100">
