--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,7 +18,7 @@
             <div class="col-12 col-md-10 col-lg-8 col-xl-6 h-100">
                 <div class="card bg-success-subtle h-100" style="border-radius: 15px;">
                     <div class="card-body h-100 p-5">
-                        <h2 class="text-uppercase text-center mb-5">Create an account</h2>
+                        <h2 class="text-uppercase text-center mb-5">Sign in to your account</h2>
                         <form
                                 class=""
                                 method="post"
