--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -24,6 +24,8 @@
                                 th:action="@{/register}"
                                 th:object="${user}">
 
+                            <div class="alert alert-danger" th:if="|${!#strings.isEmpty(usernameAlreadyInUse)}|" th:utext="|${usernameAlreadyInUse}|"></div>
+
                             <div class="form-outline mb-4">
                                 <input type="text" id="username" th:field="*{username}" name="username"
                                        class="form-control form-control-lg" placeholder="Enter username"/>
